# ZKPONIC

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/plonk/: Cargo.toml
src/plonk/src/: lib.rs
src/plonkytwotest/: Cargo.toml
src/plonkytwotest/src/: lib.rs
src/zkp_backend/: Cargo.toml  zkp_backend.did
src/zkp_backend/src/: lib.rs
src/zkp_frontend/src/: index.html  index.js
