[package]
name = "plonkytwotest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
num-traits = "0.2.14"
rand = "0.8.5"
rand_core = { version="0.6.3", features = ["getrandom"] }
getrandom = { version = "0.2.2", features = ["custom"] }
recrypt = { version = "~0.11.0", features = ["wasm"], default-features = false }
plonky2 = { version="0.1.1", default-features = false}
anyhow = "1.0"
