[package]
name = "zkp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
ark-groth16 = { version = "0.3.0", default-features = false}
ark-marlin = {version = "0.3.0", default-features = false }
dusk-plonk = {version = "0.13.0", features = ["alloc"] }
ark-std = { version = "0.3.0", features = ["std"]}
ark-ff = { version = "0.3.0", default-features = false}
ark-relations = { version = "0.3.0", default-features = false}
ark-bls12-381 = { version = "0.3.0", features = [ "curve" ] }
ark-bn254 = { version = "0.3.0", features = ["curve"]}
ark-ec = { version = "0.3.0", default-features = false}
num-traits = "0.2.14"
ark-serialize = "^0.3.0"
ark-poly-commit = { version = "0.3.0", default-features = false }
ark-poly = { version = "0.3.0", default-features = false }
blake2 = { version = "0.9", default-features = false }
rand_core = { version="0.6.3", features = ["getrandom"] }
getrandom = { version = "0.2.2", features = ["custom"] }
dusk-jubjub = {version = "0.12", default-features = false}
