[package]
name = "zkp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
ark-groth16 = { version = "0.3.0", default-features = false}
ark-marlin = {version = "0.3.0", default-features = false }
ark-std = { version = "0.3.0", features = ["std"]}
ark-ff = { version = "0.3.0", default-features = false}
ark-relations = { version = "0.3.0", default-features = false}
ark-bls12-381 = { version = "0.3.0", features = [ "curve" ] }
ark-bn254 = { version = "0.3.0", features = ["curve"]}
ark-ec = { version = "0.3.0", default-features = false}
num-traits = "0.2.14"
ark-serialize = "^0.3.0"
ark-poly-commit = { version = "0.3.0", default-features = false }
ark-poly = { version = "0.3.0", default-features = false }
blake2 = { version = "0.9", default-features = false }
bulletproofs = "4.0.0"
curve25519-dalek = "3.2.1"
merlin = "3.0.0"
rand = "0.7"
rand_core = { version="0.6.3", features = ["getrandom"] }
getrandom = { version = "0.2.2", features = ["custom"] }
recrypt = { version = "~0.11.0", features = ["wasm"], default-features = false }
